about us and location

--- a/index.html
+++ b/index.html
@@ -39,21 +39,56 @@
     </header>
     <!-- corpo do site propriamente -->
     <main>
-      <!-- como chegar -->
-      <section class="section" id="location">
-        <div class="image">
-          <img
-            src="./assets/images/pibcapao.jpeg"
-            alt="Fachada da PIB em Capão Redondo"
-          />
-          <div class="texts">
-            <p class="text">Domingo</p>
-            <p class="text">EBD às 10h / Culto às 18h</p>
+      <!-- sobre nós -->
+      <section class="section" id="aboutus">
+        <div class="container grid">
+          <div class="image">
+            <img src="#" alt="Culto na PIB Capão Redondo" />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
+              beatae dicta ducimus praesentium architecto harum dolorum
+              distinctio illo earum assumenda itaque. Omnis, quam repellat.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+              illum ratione impedit quae eum quis adipisci asperiores, est
+              doloribus distinctio excepturi minima eius dolore! Perferendis
+              laborum illo aspernatur repellendus ipsum.
+            </p>
           </div>
         </div>
       </section>
-      <!-- sobre nós -->
-      <section></section>
+      <!-- como chegar -->
+      <section class="section" id="location">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="./assets/images/pibcapao.jpeg"
+              alt="Fachada da PIB em Capão Redondo"
+            />
+          </div>
+          <div class="square">
+            <div class="text-box">
+              <h2 class="tittle">Domingo</h2>
+              <p class="text">EBD às 10h / Culto às 18h</p>
+              <p class="text">
+                <i class="icon-map-pin"></i>R. Luiz Augusto Ferreira, 1187
+              </p>
+              <a
+                href="https://goo.gl/maps/H2xrxDzgLoBMN3KQ7"
+                class="button"
+                target="_blank"
+                >Como chegar</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- fique por dentro -->
       <section></section>
       <!-- fale conosco -->
