--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -63,6 +63,7 @@
           </div>
         </div>
       </section>
+      <div class="divider-2"></div>
       <!-- como chegar -->
       <section class="section" id="location">
         <div class="container grid">
@@ -74,8 +75,6 @@
           </div>
           <div class="square">
             <div class="text-box">
-              <h2 class="tittle">Domingo</h2>
-              <p class="text">EBD às 10h / Culto às 18h</p>
               <p class="text">
                 <i class="icon-map-pin"></i>R. Luiz Augusto Ferreira, 1187
               </p>
@@ -89,13 +88,67 @@
           </div>
         </div>
       </section>
+      <div class="divider-1"></div>
       <!-- fique por dentro -->
-      <section></section>
+      <section class="section" id="keepup">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="tittle">Domingo</h2>
+            <p class="text">EBD às 10h</p>
+            <p class="text">Culto às 18h</p>
+            <br />
+            <p class="text">
+              Devido à pandemia, nossas atividades durante a semana estão
+              suspensas. Nos envie uma <a href="#contactus">mensagem</a> para
+              mais detalhes!
+            </p>
+          </div>
+        </div>
+      </section>
+      <div class="divider-2"></div>
       <!-- fale conosco -->
-      <section></section>
+      <section class="section" id="contactus">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente!</h2>
+            <p>
+              Envie uma mensagem para a igreja! Queremos tirar suas dúvidas e
+              auxiliar como possível.
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi!"
+              class="button"
+              target="_blank"
+              ><i class="icon-whatsapp"></i> Entrar em contato</a
+            >
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-1"></div>
     </main>
     <!-- RODAPÉ -->
-    <footer></footer>
+    <footer class="section">
+      <div class="container grid">
+        <div class="logo-background">
+          <a class="logo logo-alt" href="#header">
+            <img src="/assets/images/logo_pibcapao.png" />
+          </a>
+        </div>
+
+        <div class="social grid">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i
+          ></a>
+          <a href="https://youtube.com" target="_blank"
+            ><i class="icon-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
     <!-- main.js -->
     <script src="main.js"></script>
   </body>
