'about us' updated and useless comments removed

--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     <link rel="stylesheet" href="assets/fonts/style.css" />
   </head>
   <body>
-    <!-- cabeçalho com logo e menu -->
     <header id="header">
       <nav class="container">
         <a href="#" class="logo"
           >Primeira Igreja Batista <span>em Capão Redondo</span></a
         >
-        <!--menu-->
         <div class="menu">
           <ul class="grid">
             <li><a class="title" href="#about">Sobre nós</a></li>
@@ -36,9 +34,7 @@
         <div class="toggle icon-close"></div>
       </nav>
     </header>
-    <!-- corpo do site propriamente -->
     <main id="home">
-      <!-- sobre nós -->
       <section class="section" id="about">
         <div class="container grid">
           <div class="image">
@@ -50,30 +46,30 @@
           <div class="text">
             <h2 class="title">Sobre nós</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
-              beatae dicta ducimus praesentium architecto harum dolorum
-              distinctio illo earum assumenda itaque. Omnis, quam repellat.
+              Somos uma igreja batista histórica e conservadora, que procura
+              permanecer no Verdadeiro Evangelho e refletir a Luz do Senhor
+              Jesus na vida das pessoas, pois cremos que o Evangelho é o poder
+              de Deus para a salvação dos que creem.
             </p>
             <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-              illum ratione impedit quae eum quis adipisci asperiores, est
-              doloribus distinctio excepturi minima eius dolore! Perferendis
-              laborum illo aspernatur repellendus ipsum.
+              Rejeitamos qualquer ideia de um Evangelho subserviente, que
+              permite que os valores do mundo deformem a igreja, tornando-a
+              pedra de tropeço para os que buscam a Deus com o coração
+              quebrantado. Assim, buscamos crescer em amor e santidade, tendo a
+              Bíblia como única regra de fé e conduta.
             </p>
             <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-              possimus suscipit itaque, voluptates soluta nobis error neque
-              nulla dolores ipsa necessitatibus reprehenderit deserunt impedit
-              eveniet quo placeat adipisci, laboriosam debitis.
+              A PIB em Capão Redondo foi organizada em 24 de novembro de 1979. É
+              filiada à Convenção Batista Brasileira (CBB) e à Associação das
+              Igrejas Batistas do Sudoeste da Capital (SUDOCAP), sendo aualmente
+              pastoreada pelo Pastor Edevaldo Alves Varela (nº da OPBB: 2046).
             </p>
           </div>
         </div>
       </section>
       <div class="divider-2"></div>
-      <!-- LOCATION -->
       <section class="section" id="location">
         <div class="container grid">
           <div class="image">
@@ -99,7 +95,6 @@
         </div>
       </section>
       <div class="divider-1"></div>
-      <!-- FALE CONOSCO -->
       <section class="section" id="contact">
         <div class="container grid">
           <div class="text">
@@ -136,7 +131,6 @@
 
       <div class="divider-2"></div>
     </main>
-    <!-- RODAPÉ -->
     <footer class="section" id="social">
       <div class="container grid">
         <div class="social grid">
@@ -157,7 +151,7 @@
         </div>
 
         <div class="brand">
-          <a href="#home" class="img_logo"
+          <a href="#social" class="img_logo"
             ><img src="/assets/images/logo_pibcapao.png"
           /></a>
         </div>
@@ -165,8 +159,10 @@
     </footer>
 
     <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
     <!-- scroll reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
+
     <!-- main.js -->
     <script src="main.js"></script>
   </body>
