adding 'contribute' section

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     <header id="header">
       <nav class="container">
         <a href="#" class="logo"
-          >Primeira Igreja Batista <span>em Capão Redondo</span></a
+          >Primeira Igreja Batista<br><span>em Capão Redondo</span></a
         >
         <div class="menu">
           <ul class="grid">
             <li><a class="title" href="#about">Sobre nós</a></li>
             <li><a class="title" href="#location">Como chegar</a></li>
             <li><a class="title" href="#contact">Fale conosco</a></li>
+            <li><a class="title" href="#contribute">Contribua</a></li>
             <li><a class="title" href="#social">Redes sociais</a></li>
           </ul>
         </div>
@@ -130,6 +131,42 @@
       </section>
 
       <div class="divider-2"></div>
+
+      <section class="section" id="contribute">
+        <div class="container grid">
+          <header>
+            <h2 class="title">Contribua!</h2>
+            <p class="subtitle">
+              Caso você não possa entregar seu dízimo ou oferta pessoalmente, ou prefira os meios digitais, utilize um dos serviços abaixo.
+            </p>
+            <br>
+            <h6 class="subtitle">Se você não faz parte da igreja, seu engajamento em nossas atividades é mais importante que sua oferta, mas sinta-se à vontade para contribuir.</h6>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <img src="assets/images/logo_bradesco.png" alt="Logo do Banco Bradesco nas cores da PIB em Capão Redondo"></img>
+              <h3 class="title">Bradesco</h3>
+              <div class="info">
+                <p>
+                  Agência 2744-8
+                </p>
+                <p>
+                  C/C 1847-3
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assets/images/logo_pix.png" alt="Logo do PIX nas cores da PIB em Capão Redondo"></img>
+              <h3 class="title">PIX</h3>
+              <p>
+                CNPJ 50.547.579/0001-85
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="divider-1"></div>
+
     </main>
     <footer class="section" id="social">
       <div class="container grid">
@@ -152,7 +189,7 @@
 
         <div class="brand">
           <a href="#social" class="img_logo"
-            ><img src="/assets/images/logo_pibcapao.png"
+            ><img src="/assets/images/logo_pibcapao.png" alt="Logo da Primeira Igreja Batista em Capão Redondo"
           /></a>
         </div>
       </div>
