fixing 'about us' text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p>
               A PIB em Capão Redondo foi organizada em 24 de novembro de 1979. É
               filiada à Convenção Batista Brasileira (CBB) e à Associação das
-              Igrejas Batistas do Sudoeste da Capital (SUDOCAP), sendo aualmente
+              Igrejas Batistas do Sudoeste da Capital (SUDOCAP), sendo atualmente
               pastoreada pelo Pastor Edevaldo Alves Varela (nº da OPBB: 2046).
             </p>
           </div>
