updating 'location' section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
               <abbr title="Escola Bíblica Dominical">EBD</abbr> às 10h | Culto
               às 18h
             </p>
+            <h2 class="title">Quarta-feira</h2>
+            <p class="subtitle">
+              Culto de Oração às 19h30
+            </p>
             <a
               href="https://goo.gl/maps/H2xrxDzgLoBMN3KQ7"
               class="button"
