Fix EBD's starting time

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="text">
             <h2 class="title">Domingo</h2>
             <p class="subtitle">
-              <abbr title="Escola Bíblica Dominical">EBD</abbr> às 10h | Culto
+              <abbr title="Escola Bíblica Dominical">EBD</abbr> às 9h30 | Culto
               às 18h
             </p>
             <h2 class="title">Quarta-feira</h2>
