--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     />
     <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
+    <!-- Mini icone página -->
+    <link rel="shortcut icon" href="assets/images/logo_pibcapao.png">
   </head>
   <body>
     <header id="header">
